--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,8 +11,20 @@
 @import "components/index";
 @import "pages/index";
 
+.container {
+  text-decoration: none;
+}
+
+.flat-add {
+}
+.flat-add:hover {
+  color: black;
+}
+
 .card-img-top {
   width: 100%;
-  height: 10vw;
+  height: 20vw;
   object-fit: cover;
 }
+
+a:link { text-decoration: none; }
