--- a/app/views/flats/_form.html.erb
+++ b/app/views/flats/_form.html.erb
@@ -1,8 +1,12 @@
-<%= simple_form_for @flat do |f| %>
-  <%= f.input :name %>
-  <%= f.input :address %>
-  <%= f.input :description %>
-  <%= f.input :price_per_night %>
-  <%= f.input :number_of_guests %>
-  <%= f.submit %>
-<% end %>
+<div class="container p-5 m-5 shadow bg-white rounded">
+<h1 class="text-center">Add Your Flat Form</h1>
+  <%= simple_form_for @flat do |f| %>
+    <%= f.input :name %>
+    <%= f.input :address %>
+    <%= f.input :description %>
+    <%= f.input :price_per_night %>
+    <%= f.input :number_of_guests %>
+    <%= link_to 'Back', flats_path, class: "btn btn-primary btn-lg text-light" %>
+    <%= f.button :submit, class: "btn btn-primary btn-lg text-light" %>
+  <% end %>
+</div>
