corrected pathing for back buttons and edit buttons along with errors in other pathing

--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,8 +1,8 @@
 <%= render 'nav' %>
 <div class="container my-5 p-3 shadow bg-white rounded">
   <div class="row">
-    <div class="col-12">
-      <h1>All Flats</h1>
+    <div class="col-12 p-3 ms-3">
+      <h1>All Flats (<%= @flats.count %>)</h1>
     </div>
   </div>
 
