--- a/app/views/flats/_form.html.erb
+++ b/app/views/flats/_form.html.erb
@@ -6,7 +6,7 @@
     <%= f.input :description %>
     <%= f.input :price_per_night %>
     <%= f.input :number_of_guests %>
-    <%= link_to 'Back', flats_path, class: "btn btn-primary btn-lg text-light" %>
+    <%= link_to 'Back', flat_path(@flat), class: "btn btn-primary btn-lg text-light" %>
     <%= f.button :submit, class: "btn btn-primary btn-lg text-light" %>
   <% end %>
 </div>
