--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -5,5 +5,7 @@
 <div class="p-5 m-5 shadow-sm bg-light rounded">
   <p><%= @flat.address %></p>
   <p><%= @flat.description %></p>
-  <%= link_to 'Back', flats_path, class:'class: "btn btn-primary btn-sm text-light"' %>
+  <%= link_to 'Back', flats_path, class: "btn btn-primary btn-sm text-light" %>
+  <%= link_to 'Update Flat', edit_flat_path(@flat), class: "btn btn-primary btn-sm text-light" %>
+
 </div>
