--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,8 +15,6 @@
   text-decoration: none;
 }
 
-.flat-add {
-}
 .flat-add:hover {
   color: black;
 }
@@ -28,3 +26,13 @@
 }
 
 a:link { text-decoration: none; }
+
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
