--- a/app/views/flats/_form.html.erb
+++ b/app/views/flats/_form.html.erb
@@ -6,6 +6,7 @@
     <%= f.input :description %>
     <%= f.input :price_per_night %>
     <%= f.input :number_of_guests %>
+    <%= f.input :picture_url %>
     <%= link_to 'Back', flat_path(@flat), class: "btn btn-primary btn-lg text-light" %>
     <%= f.button :submit, class: "btn btn-primary btn-lg text-light" %>
   <% end %>
