--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -10,7 +10,7 @@
   <% @flats.each do |flat| %>
   <div class="col-md-4 mb-4">
     <div class="card h-100 img-thumbnail mb-2" style="">
-      <img src="https://source.unsplash.com/random" class="card-img-top img-thumbnail" alt="...">
+        <img class="card-img-top img-thumbnail" src="<%=flat.picture_url%>">
       <div class="card-body">
         <div class="card-title"><h5><%= flat.name%></h5></div>
         <p class="card-text"><%= flat.address %></p>
