--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,11 +1,17 @@
 <%= render 'nav' %>
-<div class="p-5 m-5 shadow-sm bg-light rounded">
-  <h1><%= @flat.name %></h1>
-</div>
+<div class="show-container">
+  <div class=".bg-secondary.bg-gradient hero-image"><img src="<%= @flat.picture_url %>"></div>
+
+
+  <div class="hero-text">
+    <h1><%= @flat.name %></h1>
+  </div>
+
 <div class="p-5 m-5 shadow-sm bg-light rounded">
   <p><%= @flat.address %></p>
   <p><%= @flat.description %></p>
   <%= link_to 'Back', flats_path, class: "btn btn-primary btn-sm text-light" %>
   <%= link_to 'Update Flat', edit_flat_path(@flat), class: "btn btn-primary btn-sm text-light" %>
 
+  </div>
 </div>
