--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,14 +25,23 @@
   object-fit: cover;
 }
 
+.hero-image {
+  object-fit: cover;
+  width: 100%;
+  height: 500px;
+  background-position: center;
+  background-size: cover;
+}
+
 a:link { text-decoration: none; }
 
-
 .hero-text {
+  font-size: 400%;
+  color: white;
+  text-shadow: 1px 1px 3px #444;
   text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: white;
 }
